Fix images being stretched in single-plugs

--- a/app/assets/stylesheets/display.css.scss
+++ b/app/assets/stylesheets/display.css.scss
@@ -3167,7 +3167,8 @@ SINGLE-PLUGS
 		.single-plugs img {
 			display: block;
 			width: auto;
-			height: 100%;
+			height: auto;
+			max-height: 100%;
 			max-width: 100%;
 			margin: 0 auto;
 		}
